# SFML-Boilerplate-MacOS

./: CMakeLists.txt  README.md  main.cpp
_backend/: AppBackend.cpp  AppBackend.h
_frontend/: AppFrontend.cpp  AppFrontend.h  Components.h  Config.h
